2009-03-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c:
	  Remove offending g_warning() accidentally left in.

2009-03-31  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/mb/hd-app-menu.c (hd_app_menu_request_geometry):
	honour size and position requests.
	Fixes NB#94957.

2009-03-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c (add_nothumb):
	  Don't forget to set the font of the notification text.

2009-03-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  Let us entertain ourselves with another change and don't assume
	  portrait mode support by default.

2009-03-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#108599 _HILDON_PORTRAIT_MODE_SUPPORT not inherited with transiency

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_should_be_portrait):
	  Inherit the flag even if the parent is not visible.

2009-03-31  Gordon Williams <gordon.williams@collabora.co.uk>

        * src/tidy/tidy-blur-group.c: Changes to fix blank/garbled screen on
        landscape->portrait transition (when background blurred), NB#107951

2009-03-31  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.32

2009-03-30  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c: Comment to help make code less cryptic
	* src/tidy/tidy-mem-texture.c: Fix covertity finding about unsigned
	numbers that causes 'if' clause to be true.
	* src/home/hd-render-manager.c: Removed un-needed debug printing

2009-03-30  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.c (hd_render_manager_sync_clutter_before):
	  Regression fix.  Don't show the status area in launcher view.
	  Nor in any other states it's not supposed to be there.

2009-03-30  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/mb/hd-desktop.c (hd_desktop_stack): Set
	_HILDON_APPLET_ON_CURRENT_DESKTOP property only when desktop is really
	visible. Fixes: NB#108527
